infra/observability/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
spec:
  tls:
    - hosts:
        - analytics-ui.sXXXXXXX-at-student-dhbw-mannheim-de.users.dhbw.site
  rules:
    - host: analytics-ui.sXXXXXXX-at-student-dhbw-mannheim-de.users.dhbw.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
